<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/timeline"
        android:orderInCategory="100"
        android:title="@string/timeline" />

    <item
        android:id="@+id/user"
        android:orderInCategory="100"
        android:title="@string/user" />

    <item
        android:id="@+id/followingTimeline"
        android:orderInCategory="100"
        android:title="@string/followingTimeline" />

    <item
        android:id="@+id/map"
        android:orderInCategory="100"
        android:title="@string/title_map" />

    <item android:id="@+id/menuSettings"
        android:title="@string/menuSettings"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/menuLogout"
        android:orderInCategory="100"
        android:title="@string/menuLogout"/>

</menu>