<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DeepSkyBlue">

    <Button
        android:id="@+id/welcomeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeLogin"
        android:onClick="loginPressed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="132dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/welcomeSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSignup"
        android:onClick="signupPressed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="132dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toRightOf="@+id/welcomeLogin"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="197dp"
        android:layout_height="125dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/welcomeText"
        android:textAppearance="@style/TextAppearance.Large"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="341dp"
        android:layout_height="46dp"
        android:text="@string/welcomeMessage"
        android:textAppearance="@style/TextAppearance.Medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        android:textColor="@color/white"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>